// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Groups: (excludeGroups=false) should render group TOC' 1`] = `
"## Index

### Enumerations

- [EnumA](exports.md#enuma)
- [EnumB](exports.md#enumb)

### Classes

- [ClassA](exports.md#classa)
- [ClassB](exports.md#classb)

### Interfaces

- [InterfaceA](exports.md#interfacea)
- [InterfaceB](exports.md#interfaceb)

### Type Aliases

- [typeA](exports.md#typea)
- [typeB](exports.md#typeb)

### Variables

- [variableA](exports.md#variablea)
- [variableB](exports.md#variableb)

### Functions

- [functionA](exports.md#functiona)
- [functionB](exports.md#functionb)
"
`;

exports[`Groups: (excludeGroups=false) should render group members' 1`] = `
"## Enumerations

### EnumA

[partial: reflectionMember]



---

### EnumB

[partial: reflectionMember]



---

## Classes

### ClassA

[partial: reflectionMember]



---

### ClassB

[partial: reflectionMember]



---

## Interfaces

### InterfaceA

[partial: reflectionMember]



---

### InterfaceB

[partial: reflectionMember]



---

## Type Aliases

### typeA

[partial: declarationMember]



---

### typeB

[partial: declarationMember]



---

## Variables

### variableA

[partial: declarationMember]



---

### variableB

[partial: declarationMember]



---

## Functions

### functionA()

[partial: signatureMember]



---

### functionB()

[partial: signatureMember]



---"
`;

exports[`Groups: (excludeGroups=true) should render group TOC' 1`] = `
"## Index

- [EnumA](exports.md#enuma)
- [EnumB](exports.md#enumb)
- [ClassA](exports.md#classa)
- [ClassB](exports.md#classb)
- [InterfaceA](exports.md#interfacea)
- [InterfaceB](exports.md#interfaceb)
- [typeA](exports.md#typea)
- [typeB](exports.md#typeb)
- [variableA](exports.md#variablea)
- [variableB](exports.md#variableb)
- [functionA](exports.md#functiona)
- [functionB](exports.md#functionb)"
`;

exports[`Groups: (excludeGroups=true) should render group members' 1`] = `
"## Enumerations

### EnumA

[partial: reflectionMember]



---

### EnumB

[partial: reflectionMember]



---

## Classes

### ClassA

[partial: reflectionMember]



---

### ClassB

[partial: reflectionMember]



---

## Interfaces

### InterfaceA

[partial: reflectionMember]



---

### InterfaceB

[partial: reflectionMember]



---

## Type Aliases

### typeA

[partial: declarationMember]



---

### typeB

[partial: declarationMember]



---

## Variables

### variableA

[partial: declarationMember]



---

### variableB

[partial: declarationMember]



---

## Functions

### functionA()

[partial: signatureMember]



---

### functionB()

[partial: signatureMember]



---"
`;
